Finished Sections 1 and 2 - Section 2 Overflows. Need to fix

--- a/wst.css
+++ b/wst.css
@@ -356,15 +356,122 @@ nav ul li a {
     flex: 1;
  }
 
-/* 
- #q2 div:first-child:first-child {
-    width: 38%;
+ /* SECTION 3 */
+
+ #q3 {
+     display: grid;
+     height: 110vh;
+     width: 100vw;
+     background-color: black;
+     grid-template-columns: 1fr 1fr;
+     grid-template-rows: 1fr 1fr;
+     column-gap: 1em;
+     row-gap: 1em;
  }
 
- #q2 div:first-child:nth-child(2) {
-    width: 4%;
+ .q3-box {
+     background-color: white;
  }
 
- #q2 div:first-child:nth-child(3) {
-    width: 58%;
- } */
+ .q3-box1 {
+     background-color: black;
+     display: grid;
+     grid-template-rows: 1fr 4fr;
+     row-gap: 1em;  
+ }
+
+ .q3-box1 div {
+    background-color: red
+}
+
+#q3-box1-title {
+    z-index: 1;
+    writing-mode: vertical-lr;
+    display: inline-block;
+    color: black;
+    text-align: center;
+    margin: 0;
+    padding-left: 10px;
+    position: relative;
+    font-size: 1.2em;
+}
+
+.q3-box2 {
+    background-color: black;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    column-gap: 1em;  
+}
+
+.q3-box2 div:first-child {
+    background-color: white;
+    padding: 20px;
+    word-wrap: break-word;
+    overflow: auto;
+    font-size: 1.1em;
+}
+
+
+.q3-box2 div:nth-child(2) {
+    background-color: yellow;
+}
+
+.q3-box3  {
+    background-color: black;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 5fr 1fr;
+    column-gap: 1em;
+    row-gap: 1em;
+}
+
+.q3-box3 > div:nth-child(2) {
+    background-color: white;
+    padding: 20px;
+    word-wrap: break-word;
+    overflow: auto;
+    font-size: 1.1em;
+}
+
+.q3-box3 div {
+    background-color: white;
+}
+
+.q3-box3 div:first-child {
+    z-index: 1;
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+    display: inline-block;
+    color: #c7360d;
+    text-align: right;
+    margin: 0;
+    padding-left: 10px;
+    text-align: center;
+    font-size: 1.2em;
+}
+
+.q3-box3 div:nth-child(3) {
+    grid-column: 1/3;
+}
+
+.q3-box4 {
+    display: grid;
+    background-color: black;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 3fr 2fr;
+    row-gap: 1em;
+    column-gap: 1em;
+}
+
+.q3-box4 div {
+    background-color: white;
+}
+
+.q3-box4 div:nth-child(2) {
+    background-color: black;
+}
+
+.q3-box4 div:nth-child(3) {
+    grid-column: 1/3;
+    background-color: blue;
+}
